Updated namespace and PSR-4 autoload

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     }
   ],
   "require": {
-    "php": "^5.5|^7.0",
-    "ext-pdo": "*",
-    "ext-json": "*",
-    "ext-mbstring": "*"
+    "ext-json": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "uspilot\\IniParser\\": "/"}
   }
 }
